# chatty-debug

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: push.yml
chatty_debug/: __init__.py  __main__.py  debugger.py  suggestions.py
